Bug 1319554 - allow WindowSurfaceX11Image to render to any visual format. r=rhunt a=gchang

MozReview-Commit-ID: JW4REAg1AKn